# AVSoft_test_tasks

Task1/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  README.md  employee.h  enterprise_division.h  main.cpp  tree_model.h  xml_reader.h
Task2/views/: division_editor.cpp  division_editor.h  employee_editor.cpp  employee_editor.h  main_window.cpp  main_window.h
